--- a/webserv/dsite/418.html
+++ b/webserv/dsite/418.html
@@ -1,4 +1,21 @@
-<center>
-	<h1>I'm a teapot 418</h1>
-	<img src="https://ih1.redbubble.net/image.747132516.8280/flat,750x,075,f-pad,750x1000,f8f8f8.u2.jpg" alt="Condorello">
-</center>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="shortcut icon" href="./Assets/img/icona.jpg" type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href="./Assets/main.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="x-ua-compatible" content="ie=8">
+        <meta name="keywords" content="">
+        <meta name="author" content="Andrei Anghi[Angly colui che regna]">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="copyright" content="Andrei Anghi[Angly colui che regna]">
+        <title>Error 418 | Wengly</title>
+    </head>
+    <body>
+        <center>
+            <div class="centro">
+                <h1 class="titolo">I'm a teapot<br><br>Error 418</h1>
+            </div>
+        </center>
+    </body>
+</html>
