--- a/webserv/marshal/dsite/index.html
+++ b/webserv/marshal/dsite/index.html
@@ -1,1 +1,1 @@
-<center><h1>Benvenuto nella pagina di default di Wegly</h1></center>
+<center><h1>Benvenuto nella pagina di default di Wengly</h1></center>
