--- a/webserv/site/404.html
+++ b/webserv/site/404.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Andrei Anghi[Angly colui che regna]">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="copyright" content="Andrei Anghi[Angly colui che regna]">
-        <title>Error 404 | Wegly</title>
+        <title>Error 404 | Wengly</title>
     </head>
     <body>
         <center>
