--- a/webserv/site/home.html
+++ b/webserv/site/home.html
@@ -9,12 +9,12 @@
         <meta name="author" content="Andrei Anghi[Angly colui che regna]">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="copyright" content="Andrei Anghi[Angly colui che regna]">
-        <title>Home | Wegly</title>
+        <title>Home | Wengly</title>
     </head>
     <body>
         <center>
             <div class="centro">
-                <h1 class="titolo">Benvenuto nel sito di Wegly</h1>
+                <h1 class="titolo">Benvenuto nel Web Server Wengly</h1>
                 <p class="sottotitolo">
                     Questo sito e gestito dal Web Server di
                     <br>
