voglio mangiare il tuo pancreas

--- a/webserv/site/home2.html
+++ b/webserv/site/home2.html
@@ -9,20 +9,20 @@
         <meta name="author" content="Andrei Anghi[Angly colui che regna]">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="copyright" content="Andrei Anghi[Angly colui che regna]">
-        <title>Home | Wengly</title>
+        <title>Chi e Andrei Anghi | Wengly</title>
     </head>
     <body>
         <center>
             <div class="centro">
-                <h1 class="titolo">Benvenuto nel Web Server Wengly</h1>
+                <h1 class="titolo">Chi e Andrei Anghi</h1>
                 <p class="sottotitolo">
-                    Questo sito e gestito dal Web Server di
+					Andrei Anghi[Angly colui che regna] e il miglior programmatore che esista. 
                     <br>
-                    <a class="link" target="_blank" href="https://andreianghi.ddns.net/">Andrei Anghi[Angly colui che regna]</a>
+                    <a class="link" target="_blank" href="https://andreianghi.ddns.net/">Per saperne di piu.</a>
                     <br><br>
-                    <a class="link" href="home2.html">Chi e Andrei Anghi</a>
-					<br>
                     <a class="link" href="funzionalita.php">Esplora le funzionalita</a>
+					<br>
+                    <a class="link" href="home2.html">Home</a>
                 </p>
             </div>
         </center>
