voglio mangiare il tuo pancreas

--- a/webserv/site/home2.html
+++ b/webserv/site/home2.html
@@ -21,8 +21,8 @@
                     <a class="link" target="_blank" href="https://andreianghi.ddns.net/">Per saperne di piu.</a>
                     <br><br>
                     <a class="link" href="funzionalita.php">Esplora le funzionalita</a>
-					<br>
-                    <a class="link" href="home2.html">Home</a>
+					<br><br>
+                    <a class="link" href="home.html">Home</a>
                 </p>
             </div>
         </center>
