--- a/webserv/site/418.html
+++ b/webserv/site/418.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="shortcut icon" href="./Assets/img/icona.jpg" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="./Assets/main.css">
+        <link rel="stylesheet" type="text/css" href="../Assets/main.css">
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=8">
         <meta name="keywords" content="">
