--- a/webserv/site/ripasso_loc/index.html
+++ b/webserv/site/ripasso_loc/index.html
@@ -18,9 +18,9 @@
                 <p class="sottotitolo">
                     In questa cartella non ce il blocco del autoindex
                     <br>
-                    <a class="link" target="_blank" href="/ripasso_loc">Prova autoindex</a>
+                    <a class="link" target="_blank" href="/ripasso_loc/">Prova autoindex</a>
 					<br><br>
-                    <a class="link" target="_blank" href="/ripasso">Redirect diverso</a>
+                    <a class="link" target="_blank" href="/ripasso_loc/ripasso">Redirect diverso</a>
                 </p>
             </div>
         </center>
