--- a/ft_trans/frontend/app/index.html
+++ b/ft_trans/frontend/app/index.html
@@ -7,9 +7,7 @@
 	<link rel="icon" href="./img/favicon.png" type="image/png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-	
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -20,11 +18,10 @@
 		<div class="modal-dialog modal-dialog-centered">
 		  	<div class="modal-content mybg">
 				<div class="modal-header">
-			  		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
+					<h1 class="text-white"> !!! </h1>
+			  		<button type="button" class="text-white" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
 				</div>
-				<div class="modal-body">
-			  		<h1 class="text-white" id="ERROREMessage"></h1>
-				</div>
+				<div class="modal-body"><h1 class="text-white" id="ERROREMessage"></h1></div>
 		  	</div>
 		</div>
 	</div>	  
